force-app/main/default/objects/Test_Vehicle_Log__c/Test_Vehicle_Log__c.object-meta.xml
<CustomObject>
    <description>Object created by Automation Setting Unlocked Package.</description>
    <label>Vehicle Log</label>
    <nameField>
        <displayFormat>VL-{0000}</displayFormat>
        <label>Vehicle#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>