force-app/main/default/objects/Test_Vehicle_Log__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <label>Make</label>
    <length>18</length>
    <type>Text</type>
</CustomField>