force-app/main/default/objects/Test_Vehicle_Log__c/fields/Models__c.field-meta.xml
<CustomField>
    <fullName>Models__c</fullName>
    <label>Models</label>
    <length>18</length>
    <type>Text</type>
</CustomField>